<resources>
    <string name="app_name">Loner Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_monitoring">Start Monitoring</string>
    <string name="scanBLETxt">Scan for Duo Devices Now</string>
    <string name="availableTxt">Available devices</string>
    <string name="defaultDeviceTxt">Default Device</string>
    <string name="duoDevicesTxt">Duo Devices</string>
    <string name="noneTxt">None</string>
    <string name="default_unit">1</string>
    <string name="title_activity_monitoring">MonitoringActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_emergency_alert_activiy">EmergencyAlertActiviy</string>
    <string name="title_activity_emergency_alert">EmergencyAlertActivity</string>
    <string name="title_activity_silent_alert_activiy">SilentAlertActiviy</string>
    <string name="title_activity_silent_alert">SilentAlertActivity</string>
    <string name="title_activity_missed_checkin">MissedCheckinActivity</string>
    <string name="title_activity_monitoring_base">MonitoringBaseActivity</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="silent_alert">Silent Alert</string>
    <string name="timer">00:00:00</string>
    <string name="next_check_in">NEXT CHECK-IN</string>
    <string name="send_check_in">Check-in</string>
    <string name="send_check_in_with_notes">Check-in \nwith note</string>
    <string name="monitoring_enabled">Monitoring Enabled</string>
    <string name="slide_for_emergency">Slide for Emergency</string>
    <string name="alert_sent">Alert Sent</string>
    <string name="emergency">Emergency</string>
    <string name="silent">Silent</string>
    <string name="acknowledge">Acknowledge &amp; Check-in</string>
    <string name="will_be_sent_in">will be sent in:</string>
    <string name="missed_check_in_now">Missed check-in. Please check-in now.</string>
    <string name="missed_check_in">Missed check-in</string>
    <string name="mobile_number">Phone #</string>
    <string name="password">Password</string>
    <string name="activationCodeTxt">Activation code</string>
    <string name="descriptionText"> If you do not have an activation code</string>
    <string name="next_description_text">please contact blackline GPS</string>
    <string name="email_text">Email:</string>
    <string name="email_link_text"><u>support@blacklinegps.com</u></string>
    <string name="phone_text">North America:</string>
    <string name="phone_link_text"><u>+1 877-869-7212</u></string>
    <string name="internationa_phone_text">International:</string>
    <string name="international_phone_link_text"><u>+1 403-451-0327</u></string>
    <string name="title_activity_sound">SoundActivity</string>
    <string name="back">Back</string>
    <string name="countdown">30</string>
    <string name="title_activity_change_configuration">ChangeConfigurationActivity</string>
    <string name="country_prompt"></string>
    <string name="add_noteTxt">Add Note</string>
    <string name="duo_devicesTxt">Duo Devices</string>
    <string name="note_entry_fieldTxt">Note Entry Field\n\n\n\n\n\n</string>
    <string name="note_missingTxt">Please enter a Note.</string>
    <string name="note_sentTxt">Checkin Sent.</string>
    <string name="sending_noteTxt">Sending Note.</string>
    <string name="title_activity_alert_history">AlertHistoryActivity </string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="paired_devices_title">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit BLE?</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="change_timer">Change Timer</string>
    <string name="alert_history">Alert History</string>
    <string name="loading">Loading..</string>
    <string name="configuration">Configuration</string>
    <string name="error">Error</string>
    <string name="error_info">There was an issue contacting the Loner Mobile servers, please try again.</string>
    <string name="okay">OK</string>
    <string name="reconnect">Reconnect</string>
    <string name="network_lost_error_dialog">Loner Mobile has lost connection to the server. Check your devices network connection.</string>
    <string name="network_connected_error_dialog">Loner Mobile is connected and communicating to the server.</string>
    <string name="network_connection_lost_notification">Loner Mobile needs network access to begin monitoring. Please try again.</string>
    <string name="network_connection_lost">Network connection has been lost.</string>
    <string name="cant_connect_network">Network Error</string>
    <string name="stop_monitoring">Stop Monitoring</string>
    <string name="app_connected">App is connected, resuming monitoring</string>
    <string name="fdu_disconnected">Loner Duo is not connected.</string>
    <string name="fdu_connected">Loner Duo is connected to this mobile device.</string>
    <string name="cancel_alert_text_emergency">Unable to acknowledge emergency alarm - you need a network connection to do this.</string>
    <string name="location_turned_off">Monitoring was stopped as location service was turned off</string>
    <string name="location_off_notification">Monitoring stopped as location service has been turned off.</string>
    <string name="emr_alert_sent">Emergency alert has been sent</string>
    <string name="silent_alert_sent">Silent alert has been sent</string>
    <string name="activation_failure">Activation Failure</string>
    <string name="activation_info">Please check your Phone # and Password.</string>
    <string name="retry">Retry</string>
    <string name="connection_error">Connection Error</string>
    <string name="connection_info">Loner Mobile needs network access to begin monitoring, please try again.</string>
    <string name="help">Please contact Blackline GPS for an activation code</string>
    <string name="cancel_alert_text_missed_checkin">Unable to acknowledge missed check-in alarm - you need a network connection to do this.</string>
    <string name="loner_mobile_require_service">Loner Mobile requires Location Services to be on, please re-enable in Settings</string>
    <string name="miss_checkin_alert_sent">Missed check-in alert has been sent</string>
    <string name="via_gps_location">via GPS location</string>
    <string name="via_phone_motion">via phone motion</string>
    <string name="via_phone_use">via phone use</string>
    <string name="checkin_required">Check-in Required!</string>
    <string name="checkin">Check-in</string>
    <string name="change">Show configuration</string>
    <string name="view">View</string>
    <string name="one_song">1 song</string>
    <string name="zero_songs">0 songs</string>
    <string name="song_needed">Songs needed</string>
    <string name="loner_requires_one">Loner Mobile requires at least one song to be selected from your library.</string>
    <string name="cancel_alert_text_silent">Unable to acknowledge silent alarm - you need a network connection to do this.</string>
    <string name="app_plays_sound">This app plays audio in the background in order to notify you when you are being monitored. You can change the background sound in the settings menu</string>
    <string name="change_device">Change device</string>
    <string name="search_for_device">Search for device</string>
    <string name="there_was_a_problem">There was a problem</string>
    <string name="loner_requires_location_service">Loner Mobile requires Location Services to be on, please re-enable in Settings</string>
    <string name="gps_settings">GPS settings</string>
    <string name="gps_not_enable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="fdu_battery_per">00%</string>
    <string name="monitoring_sound">Monitoring Sound</string>
    <string name="use_phone_music">Use phone music?</string>
    <string name="sound">Sound</string>
    <string name="beep_every_minute">Beep every minute</string>
    <string name="choose_song">Choose song</string>
    <string name="volume">Volume</string>
    <string name="show_past_events">Show past events</string>
    <string name="app_configuration">App Configuration</string>
    <string name="version">Version</string>
    <string name="version_no">1.1</string>
    <string name="deviceID">Device ID</string>
    <string name="deviceIDValue">4550065</string>
    <string name="debugPurpose">Debug Purpose</string>
    <string name="countdown_timer_disabled">Check-in timer disabled</string>
    <string name="start_monitoring_timer">00:00:00</string>
    <string name="countdown_required_to_check_in">Time until next check-in</string>
    <string name="set_timer">SET TIMER</string>
    <string name="hour_text">hour</string>
    <string name="minute_text">minute</string>
    <string name="repeat_text">Repeat</string>
    <string name="disable_text">Disable</string>
    <string name="check_in_time_info">If you are using a default check-in timer, this feature will override it.</string>
    <string name="save">Save</string>
    <string name="check_in_required">Check-in required</string>
    <string name="press_ok_to_check_in_now">Press OK to check in now.</string>
    <string name="cancel_text">Cancel</string>
    <string name="ok_text">Ok</string>
</resources>