<!-- Ui screeen for missed check in alert -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Theme.NoTitleBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg_color_for_alert_screens">

    <include
        android:id="@+id/include2"
        layout="@layout/title" />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/include2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivMissedCheckin"
            android:layout_width="@dimen/alert_icon_width"
            android:layout_height="@dimen/alert_icon_height"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/missed_checkin_icon" />

        <TextView
            android:id="@+id/txtMissedCheckin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ivMissedCheckin"
            android:layout_marginTop="@dimen/diff_25"
            android:gravity="center_horizontal"
            android:text="@string/missed_check_in"
            android:textColor="@color/white"
            android:typeface="sans"
            android:textStyle="bold"
            android:textSize="@dimen/alert_title_text_size"/>

        <TextView
            android:id="@+id/txtAlertSent_Missed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtMissedCheckin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/diff_10"
            android:text="@string/alert_sent"
            android:textColor="@color/white"
            android:textSize="@dimen/alert_sub_title_text_size" />

        <Button
            android:id="@+id/btnAcknowledge"
            android:layout_width="@dimen/large_btn_width"
            android:layout_height="@dimen/btn_height_on_monitoring"
            android:layout_below="@id/txtAlertSent_Missed"
            android:text="@string/acknowledge"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/diff_20"
            android:textAllCaps="true"
            android:background="@drawable/btn_new_check_in_selector"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_size_15" />
    </LinearLayout>
   <!-- <include
        android:id="@+id/networkOverlay"
        layout="@layout/network_error_overlay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/network_overlay_height"
        android:layout_centerInParent="true"
        android:visibility="gone" />-->

</RelativeLayout>