<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/loner_dialog_width"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/diff_15"
        android:paddingRight="@dimen/diff_15"
        android:paddingTop="@dimen/diff_25"
        android:paddingBottom="@dimen/diff_25"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:id="@+id/customDialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/check_in_required"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_20"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="visible" />

        <TextView
            android:id="@+id/customDialogSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans"
            android:scrollHorizontally="true"
            android:text="@string/press_ok_to_check_in_now"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_17"
            android:typeface="sans" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actionOption"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/custonDialogOptions"
            android:layout_weight="0.5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="15dp"
            android:text="@string/cancel_text"
            android:typeface="sans"
            android:background="@drawable/btn_new_check_in_selector"
            android:textAllCaps="true"
            android:visibility="gone"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:visibility="gone"/>

        <Button
            android:id="@+id/customDialogOk"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="@drawable/btn_green_selector"
            android:fontFamily="@font/open_sans"
            android:text="@string/ok_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:typeface="sans" />

    </LinearLayout>

</LinearLayout>