<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/timeheader"
        layout="@layout/timerheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/viewline"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/timeheader"
        android:background="@color/timer_colour_light" />
    <RelativeLayout
        android:id="@+id/settimertitle"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_header_height"
        android:layout_below="@+id/timeheader">

        <!-- image view for displaying logo of the loner app -->

        <LinearLayout
            android:id="@+id/btnStop"
            android:layout_width="50dp"
            android:layout_height="@dimen/back_icon_layout_height"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:layout_marginLeft="@dimen/diff_20">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="@dimen/back_icon_width"
                android:layout_height="@dimen/back_icon_height"
                android:layout_gravity="center"
                android:clickable="false"
                android:background="@mipmap/back" />
        </LinearLayout>

        <TextView
            android:id="@+id/nameOftheScreenTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/set_timer"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_17" />


    </RelativeLayout>

    <View
        android:id="@+id/viewline1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/settimertitle"
        android:background="@color/timer_colour" />

    <LinearLayout
        android:id="@+id/numberPickerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewline1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/diff_15"
        android:paddingTop="@dimen/diff_15">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/texthour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:paddingLeft="@dimen/diff_20"
                android:text="@string/hour_text"
                android:textSize="@dimen/font_size_17" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <NumberPicker
                android:id="@+id/hourPicker"
                style="@android:style/Theme.Holo.Light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hapticFeedbackEnabled="true"
                android:layout_weight="0.5"
                android:clipToPadding="false"
                android:descendantFocusability="blocksDescendants" />

            <NumberPicker
                android:id="@+id/minutePicker"
                style="@android:style/Theme.Holo.Light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hapticFeedbackEnabled="true"
                android:layout_weight="0.5"
                android:descendantFocusability="blocksDescendants" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textminutes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingRight="@dimen/diff_20"
                android:text="@string/minute_text"
                android:textSize="@dimen/font_size_17" />


        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/viewline_one"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/numberPickerLayout"
        android:background="@color/timer_colour" />

    <RelativeLayout
        android:id="@+id/repeatLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewline_one"
        android:gravity="center_vertical"
        android:padding="@dimen/diff_10">

        <TextView
            android:id="@+id/textrepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/diff_10"
            android:text="@string/repeat_text"
            android:textSize="@dimen/font_size_17" />

        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/diff_5"
            android:src="@mipmap/spinner_arrow" />

        <TextView
            android:id="@+id/textrepeatselection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/diff_10"
            android:layout_alignBaseline="@+id/textrepeat"
            android:layout_toLeftOf="@+id/backarrow"
            android:gravity="center"
            android:text="Never"
            android:textSize="@dimen/text_repeat_size" />
    </RelativeLayout>

    <View
        android:id="@+id/viewline_second"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/repeatLayout"
        android:background="@color/timer_colour" />

    <LinearLayout
        android:id="@+id/saveButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewline_second"
        android:layout_marginTop="@dimen/diff_20"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/diff_15"
        android:paddingLeft="@dimen/diff_40"
        android:paddingRight="@dimen/diff_40"
        android:paddingTop="@dimen/diff_15">

        <Button
            android:id="@+id/btnDisableTimer"
            android:layout_width="@dimen/outlined_btn_width"
            android:layout_height="@dimen/outlined_btn_height"
            android:layout_marginRight="@dimen/diff_10"
            android:background="@drawable/btn_disable_selector"
            android:text="@string/disable_text"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/timer_save_button_size"/>

        <Button
            android:id="@+id/btnSaveTimer"
            android:layout_width="@dimen/outlined_btn_width"
            android:layout_height="@dimen/outlined_btn_height"
            android:layout_marginLeft="@dimen/diff_10"
            android:background="@drawable/btn_timer_save_selector"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/timer_save_button_size" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/saveButtonLayout"
        android:layout_marginTop="@dimen/diff_10"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/diff_15"
        android:paddingLeft="@dimen/diff_20"
        android:paddingRight="@dimen/diff_20">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"
            android:src="@mipmap/check_in_timer_info"/>
        <TextView
            android:id="@+id/check_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/diff_5"
            android:textSize="12sp"
            android:text="@string/check_in_time_info"/>

    </LinearLayout>
    <include
        android:id="@+id/networkOverlay"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/network_overlay_height"
        android:layout_centerInParent="true"
        layout="@layout/large_network_error_overlay"
        android:visibility="gone" />
</RelativeLayout>